apps/media/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/homarr-labs/homarr:v1.17.0
        ports:
        - containerPort: 7575
      volumeMounts:
      - name: appdata
        mountPath: /appdata
      volumes:
      - name: appdata
        hostPath:
          path: /mnt/data/configs/homarr/appdata
          type: Directory
